fix spacing and hover background for reaction counter (#7)

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -202,6 +202,18 @@ nav.post-controls .actions .double-button button.button-count:not(.my-likes) {
     }
 }
 
+.discourse-reactions-counter {
+    .reactions-counter {
+        margin-right: 0.5em !important;
+    }
+}
+
+.my-post {
+    .discourse-reactions-double-button:hover {
+        background-color: transparent !important;
+    }
+}
+
 @media (min-width: 1024px) {
     .lazyYT-container {
         padding: 0 !important;
